fix: Adjust margins for h2 and main list items for improved spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,11 +48,10 @@ h1 {
 	}
 }
 h2 {
-	margin: .5rem 0 ;
+	margin: 0 0 ;
 	font-size: 2rem;
 	font-weight: 500;
 	line-height: 1.1;
-	margin-bottom: var(--spacing-between);
 
 	&::first-letter {
 		text-transform: uppercase;
@@ -114,7 +113,7 @@ li {
 	}
 }
 main li{
-	margin: 0 0 0.7rem 0;
+	margin: 0 0 0.05rem 0;
 }
 section {
 	max-width: 75ch;
